<resources>
    <string name="app_name">EUMM CAISSIER</string>
    <string name="versionNotAllowed">Please Update Apk from google play store , this version is not allowed to run</string>
    <string name="app_version">App Version</string>
    <string name="agent">EUMM CAISSIER</string>
    <string name="pleaseLoginFrenchise">Please login with Franchise </string>
    <string name="franchise">Franchise</string>
    <string name="applicationForFranchise">APPLICATION FOR AGENT </string>
    <string name="searchNew">SEARCH</string>
    <string name="applicationForAgent">APPLICATION FOR AGENT</string>
    <string name="dateMontYyear">DD-MM-YYYY</string>
    <string name="customerNamesecondpage">Customer Name</string>
    <string name="status_stop"><font fgcolor='#FB0B03'>Stopped</font></string>
    <string name="SubscriberLanguage">Subscriber Language</string>
    <string name="SubscriberLanguageNew">Subscriber Language</string>
    <string name="hintMobileNo_imoneyDeposit"> Enter %1$s digit subscriber mobile number</string>
    <string name="hintMobileNo_imoneyWithdrawal"> Enter %1$s digit subscriber mobile number</string>
    <string name="date_imoney">Date:</string>
    <string name="place_imoney">Place:</string>
    <string name="idNumberimoney">Id number:</string>
    <string name="submitOtpPage">SUBMIT</string>
    <string name="transactionIdNew">Transaction Id:</string>
    <string name="transactiontype">Transaction type:</string>
    <string name="loginAnotherAccount_txtView">Login with another account</string>
    <string name="debit_amount">Debit amount :</string>
    <string name="credit_amount">Credit amount :</string>
    <string name="closing_amount">Closing amount:</string>
    <string name="residenceAreaNew">Residence</string>
    <string name="nationalityNew">Nationality</string>
    <string name="addressNew">Address</string>
    <string name="pleaseSelectCity">Please Select City</string>
    <string name="agentCode">Agent Code</string>
    <string name="agentCodeNew">Agent Code </string>
    <string name="loyality_card_number">Loyality Card number</string>
    <string name="pleaseesterAccountNoOrLayalityCardNumber">Please Enter Account Number OR Loyality Card Number</string>
    <string name="pleaseCheckInternet">Please Check Internet </string>
    <string name="uploadSucessfully">Upload Successfully  </string>
    <string name="pleaseTryAgainLater">Please try again later </string>
    <string name="pleaseEnterAgentLogin">Please Enter Correct Agent Login  </string>
    <string name="retry">Retry</string>
    <string name="expresunionmobile">EU-MOBILE MONEY</string>
    <string name="euMobileMoney">EU MOBILE MONEY CAISSIER</string>
    <string name="prompt_InvoiceNo_code">Invoice no</string>
    <string name="prompt_CustomerId">Customer Id</string>
    <string name="English">English</string>
    <string name="billerCountryTitleReview">Biller Country:</string>
    <string name="billerCountryTitleReviewNew">Biller Country:</string>
    <string name="languageSelect">Please select language</string>
    <string name="invoiceNoTitleReview">Invoice Number:</string>
    <string name="billerPreferenceTitleReview">Bill Preference:</string>
    <string name="billerNameTitleReview">Biller Name :</string>
    <string name="billerNameMarchant">Biller Name</string>
    <string name="billerNameMarchantNew">Biller Name</string>
    <string name="pleaseEnterBillNumberNew">Please enter bill  number</string>
    <string name="pleaseEnterLabelNameNew">Please enter label name</string>
    <string name="payerNoTitleReview">Payer Account:</string>
    <string name="French">French</string>
    <string name="getUnpaidBills">Get unpaid bills</string>
    <string name="billpaySuccessFinal">Your transaction of BILLPAY %1$s has successfully done for the Merchant %2$s,
        Amount: %3$s, trxn id: %4$s</string>
    <string name="stopBillPay">Stop Bill Pay</string>
    <string name="languagechoosemenu">Language Choose Menu</string>
    <string name="proceedLogin">Proceed</string>
    <string name="pleaseEnterMpin">Please enter 4 digit mpin</string>
    <string name="mobileNumber">Mobile number</string>
    <string name="mobileNumberReviewPage">Mobile number:</string>
    <string name="subscriberMobileNumberWithdrawal">Subscriber mobile number</string>
    <string name="pleaseEnterMpinLogin">Please enter 4 digit mpin</string>
    <string name="languageChoose">Language Choose Menu</string>
    <string name="telePhoneNoNumberReviewPage">Telephone Number:</string>
    <string name="accountType">Account Type:</string>
    <string name="SubscriberMobilePhoneCashIn">Subscriber Mobile Phone</string>
    <string name="transaction_cancel_eumm">EUMM Transaction Cancel</string>
    <string name="transaction_approval_eumm">EUMM Transaction Approval</string>
    <string name="title_login">Login</string>
    <string name="logout">LOGOUT</string>
    <string name="logout_small">Log Out</string>
    <string name="resendSmsConfcode">Resend Sms</string>
    <string name="resendSmsconfcodeNew">Resend Sms</string>
    <string name="unblockSubscriber">Unblock subscriber</string>
    <string name="unblock_subscriber_new">Unblock subscriber</string>
    <string name="unblockSubscriberTitle">UNBLOCK SUBSCRIBER</string>
    <string name="blockSubscriber">BLOCK SUBSCRIBER</string>
    <string name="resendSms">RESEND SMS</string>
    <string name="reSetMpin">RESET MPIN</string>
    <string name="re_setmpin_new">RESET MPIN</string>
    <string name="termialId">Terminal Id</string>
    <string name="termialId_new">Terminal Id</string>
    <string name="PleaseWaitVerifyingOTP">Please wait verifying OTP</string>
    <string name="PleaseEnterDetailstoProceedFurther">Please enter details to proceed further</string>
    <string name="PleaseEnter6DigitOTPCode">Please enter 6 digit OTP code</string>
    <string name="OTPVerification">OTP Verification</string>
    <string name="OTPVerificationNewHeding">OTP Verification</string>
    <string name="OTPVerificationOtpPage">OTP Verification</string>
    <string name="accountBalanceNew">ACCOUNT BALANCE</string>
    <string name="confirm">Confirm</string>
    <string name="confirmNew">Confirm</string>
    <string name="PleaseEnterTheCodeRecievedSMS">Please enter the code received By SMS To complete transaction</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="resend_otp_new"><u>Resend OTP</u></string>
    <string name="sendingotp">Please wait Re-Sending OTP</string>
    <string name="prompt_mPin">Enter MPIN secret code 04 digits</string>
    <string name="secerateCode">Secret code - 04digits</string>
    <string name="mpinAccountBalance">MPIN secret code 04 digits</string>
    <string name="mpinBalance">MPIN secret code 04 digits</string>
    <string name="secareteCodeMpin">Enter MPIN secret code 04 digits</string>
    <string name="nextNew">Next</string>
    <string name="nextButton">Next</string>
    <string name="pleaseEnterConfCodeOTP"> Please enter OTP</string>
    <string-array name="BranchArray">
        <item>Please Select Branch</item>
        <item>Same Branch</item>
        <item>Diffrent Branch</item>

    </string-array>
    <string-array name="BranchCodeArray">
        <item>Please Select Branch</item>
        <item>SB</item>
        <item>NSB</item>
    </string-array>
    <string name="pleaseEnterNewmpin">Please enter 4 digit new mpin</string>
    <string name="pleaseEnterConfirmPpin">Please enter 4 digit confirm mpin</string>
    <string name="prompt_todate">To Date</string>
    <string name="dateOfBirth">Birth date DD-MM-YYYY</string>
    <string name="pleaseEnterDateOfBirth">Date of birth</string>
    <string name="idproofIssueDate">Please enter Id proof issue date</string>
    <string name="pleaseEnteridproofIssueDate">Please enter Id proof issue date</string>
    <string name="pleaseEnteridproofNo">Please enter Id proof number</string>
    <string name="idproofReviewPage">ID Proof :</string>
    <string name="idproofName">Id name</string>
    <string name="prompt_fromdate">From Date</string>
    <string name="PleaseProvideMiniStatementDetails">Please Provide Mini Statement Details</string>
    <string name="miniReport">REPORTS</string>
    <string name="dateOfIssueIdProofReviewPage">Date of issue of ID Proof :</string>
    <string name="placeOfIssueIdProofReviewPage">Place of issue of ID Proof :</string>
    <string name="transactionReferenceNoProofReviewPage">Transaction Reference Number :</string>
    <string name="AccountNumberReviewPage">Account Number :</string>
    <string name="titleReviewPage">Title :</string>
    <string name="mobileBankingServiceReviewPage"> Mobile Banking Service:</string>
    <string name="billpay_title">Pay Bill</string>
    <string name="pleaseselectaccounttobedebited">Please select account to be debited</string>
    <string name="pleaseenterpaymentcode">Please enter payment Code</string>
    <string name="pleaseenterreciepientno">Please enter reciepient No</string>
    <string name="pleaseenterbillno">Please Enter Bill No</string>
    <string name="pleaseselectnameofbiller">Please select name of biller</string>
    <string name="pleaseselectcountryofbiller">Please select country of biller</string>
    <string name="accounttocashsuccess_final">Hi, Your Account to Cash Transaction has been succeessfully completed.Fee deducted is  </string>
    <string name="pleaseselectaccount">Please select account</string>
    <string name="pleaseselectonebill">Please Select at least one bill</string>
    <string name="pleaseentercorrectdates">Please enter correct dates.Period can not be Longer than 7 Days"</string>
    <string name="pleaseenterfromdate">Please enter from date</string>
    <string name="pleaseentertodate">Please enter to date</string>
    <string name="pleaseselectoperationtype">Please Select Operation Type</string>
    <string name="searchanother">Search Another</string>
    <string name="norecordfound">No Records Found</string>
    <string name="countryListIsNull">Country Code is Null</string>
    <string name="report_prints">Reports and Prints</string>
    <string name="pictures_and_Sign">Pictures and Signs</string>
    <string name="otp_new">OTP</string>
    <string name="otp_generating">Otp Generating </string>
    <string name="billPay">BILL PAY</string>
    <string name="profession">Profession</string>
    <string name="changempin_new">CHANGE MPIN</string>
    <string name="btn_changelanguage">Change Language </string>
    <string name="accountBalance">ACCOUNT BALANCE</string>
    <string name="createAccount">CREATE ACCOUNT</string>
    <string name="cashIn">CASH IN</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="date_and_place_of_birth">Date and Place of birth</string>
    <string name="identification_document_number_nic_passport_or_residence_permit">Identification document number (NIC, passport or residence permit)</string>
    <string name="profession_2">Profession</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="marital_status">Marital status</string>
    <string name="cashOut">CASH OUT</string>
    <string name="remmittance">REMITTANCE</string>
    <string name="transactionApproval">TRANSACTION APPROVAL</string>
    <string name="transactionCancel">TRANSACTION CANCEL</string>
    <string name="tariff">TARIFF</string>
    <string name="reports">REPORTS</string>
    <string name="rePrints">RE PRINTS</string>
    <string name="prints">PRINTS</string>
    <string name="address">Address</string>
    <string name="pictureSign">PICTURE SIGN</string>
    <string name="otherAccount">OTHER ACCOUNT</string>
    <string name="customerService">CUSTOMER SERVICE</string>
    <string name="languageChange">Language Change</string>
    <string name="international_Remittance">International Remittance</string>
</resources>