<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >


   <LinearLayout
       android:id="@+id/LinearLayout_main"
       android:background="#FFFF00"

       android:layout_width="match_parent"
       android:orientation="vertical"
       android:layout_height="match_parent">

       <ImageView
           android:id="@+id/imageView_eulogo"
           android:layout_width="match_parent"
           android:layout_height="128dp"
           android:background="@drawable/logoeu" />

       <TextView
           android:id="@+id/textview_name"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textSize="30dp"
           android:textStyle="bold" />

       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="100dp"
           android:background="@drawable/camera" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="9718196849"
           android:textSize="30dp"
           android:textStyle="bold" />
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:text="9718196849"
           android:textSize="30dp"
           android:textStyle="bold" />

       <ImageView
           android:layout_width="100dp"
           android:layout_height="100dp"
           android:background="@drawable/balance" />



       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/last_name"
           android:textSize="12sp" />

       <TextView
           android:id="@+id/text_last_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:hint="@string/last_name"
           android:textColor="@android:color/black"
           android:textSize="12sp" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:text="@string/first_name"
           android:textSize="12sp" />

       <TextView
           android:id="@+id/text_first_name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:hint="@string/first_name"
           android:textColor="@android:color/black"
           android:textSize="12sp" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:text="@string/date_and_place_of_birth"
           android:textSize="12sp" />

       <TextView
           android:id="@+id/text_dob_place"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:hint="@string/date_and_place_of_birth"
           android:textColor="@android:color/black"
           android:textSize="12sp" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:text="@string/identification_document_number_nic_passport_or_residence_permit"
           android:textSize="12sp" />

       <TextView
           android:id="@+id/text_document_number"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:hint="@string/identification_document_number_nic_passport_or_residence_permit"
           android:textColor="@android:color/black"
           android:textSize="12sp" />



       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:text="@string/profession_2"
           android:textSize="12sp" />

       <TextView
           android:id="@+id/text_profession"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:hint="@string/profession"
           android:textColor="@android:color/black"
           android:textSize="12sp" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:text="@string/phone_number"
           android:textSize="12sp" />

       <TextView
           android:id="@+id/text_phone_number"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:hint="@string/phone_number"
           android:textColor="@android:color/black"
           android:textSize="12sp" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:text="@string/email"
           android:textSize="12sp" />

       <TextView
           android:id="@+id/text_email"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:hint="@string/email"
           android:textColor="@android:color/black"
           android:textSize="12sp" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:text="@string/marital_status"
           android:textSize="12sp" />

       <TextView
           android:id="@+id/text_marital_status"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="10dp"
           android:layout_marginTop="5dp"
           android:hint="@string/marital_status"
           android:textColor="@android:color/black"
           android:textSize="12sp" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:text="@string/address"
           android:textSize="12sp" />

   </LinearLayout>




</LinearLayout>